Mongo, Rspec and stylesheets in architecture

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Pard</title>
+    <%= stylesheet_tag 'ours' %>
 </head>
 <body>
-  <div class="container"></div>
+  <div class="project_container"></div>
   <%= javascript_tag 'jquery' %>
   <%= javascript_tag 'ours' %>
   <%= yield %>
