--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,9 @@
 <head>
     <title>Pard</title>
     <%= javascript_tag 'jquery' %>
+    <%= javascript_tag 'vendor' %>
   	<%= javascript_tag 'ours' %>
-  	<%= stylesheet_tag 'ours' %>	
+  	<%= stylesheet_tag 'ours' %>
 </head>
 <body>
 	<section id="section_layout">
@@ -12,4 +13,4 @@
 	</section id="footer_layout">
 </body>
 </html>
-	
+
