--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,13 @@
 <head>
     <title>Pard</title>
     <%= javascript_tag 'jquery' %>
-    <%= javascript_tag 'vendor' %>
-  	<%= javascript_tag 'ours' %>
+   	<%= javascript_tag 'ours' %>
   	<%= stylesheet_tag 'ours' %>
 </head>
 <body>
 	<section id="section_layout">
    <%= yield %>
-	</section id="footer_layout">
+	</section>
 </body>
 </html>
 
