header login page and reorganization of files js

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,16 +6,20 @@
 	</head>
 
 	<body>
-		<header id="header_layout">
-		</header>
-		<section id="section_layout">
+		<!-- <section id="section_layout"> -->
     <%= javascript_tag 'jquery' %>
     <%= javascript_tag 'ours' %>
     <%= stylesheet_tag 'ours' %>
-	   <%= yield %>
-		</section>
-		<footer id_"header_layout">
-		</footer>
+	  <%= yield %>
+		<!-- </section> -->
+	
+	<script>
+      $(document).ready(function() {
+        $(document).foundation();
+      }); 
+  </script>
+
+
 	</body>
 
 </html>
