--- a/assets/stylesheets/scss/_layout.scss
+++ b/assets/stylesheets/scss/_layout.scss
@@ -14,6 +14,39 @@ small:80% -> 12.8px / 0.8rem
 
  */
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+}
+
+html, body {
+margin:0;
+width: 100%;
+min-height:100%;
+// overflow: auto;
+}
+
+html{
+  overflow: hidden;
+}
+
+body {
+  overflow: auto;
+}
 
 .very-fast {
   transition-duration: 150ms !important; }
@@ -457,9 +490,13 @@ FOOTER
   background: $content-background;
   padding-top:2rem;
   padding-bottom:3rem;
+  position: relative;
+  bottom: 0;
+  overflow: hidden;
   @include breakpoint(large) {
     margin-top: 1.8rem;
   }
+  overflow: auto;
 }
 
 .footer-right{
