--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,9 +17,9 @@
 		<!-- </section> -->
 	
 	<script>
-      $(document).ready(function() {
+      // $(document).ready(function() {
         $(document).foundation();
-      	}); 
+      	// }); 
   </script>
 
 
