--- a/assets/stylesheets/scss/_layout.scss
+++ b/assets/stylesheets/scss/_layout.scss
@@ -46,7 +46,7 @@ small:80% -> 12.8px / 0.8rem
 //   }
 
 html, body{
- min-height: 100%;
+ height: 100%;
  margin:0;
  border:0;
  padding:0;
@@ -59,9 +59,9 @@ body {
 }
 
 
-// html{
-//   overflow: hidden;
-// }
+html{
+  overflow: hidden;
+}
 
 .whole-container {
     overflow-y: scroll;
