--- a/assets/stylesheets/scss/_settings.scss
+++ b/assets/stylesheets/scss/_settings.scss
@@ -50,6 +50,7 @@
 $pard-aside-width: 11.25rem;
 $pard-section-width: 48rem;
 $pard-grid-width: 61.25rem;
+$pard-grid-spacing: 1.8rem;
 
 //colors
 $content-background: #f5f5f5;
@@ -417,7 +418,7 @@ $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
 $offcanvas-exit-background: rgba($white, 0.25);
 $maincontent-class: 'off-canvas-content';
-$maincontent-shadow: 0 0 10px rgba($black, 0.5);
+$maincontent-shadow: 0 0 0 rgba($black, 0.5);
 
 // 24. Orbit
 // ---------
