history puchstate implemented

--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -45,6 +45,15 @@ small:80% -> 12.8px / 0.8rem
 //   position:relative;
 //   }
 
+
+
+// -webkit-text-security: disc;
+
+// -moz-text-security: disc;
+
+// text-security: disc;
+
+
 html, body{
  height: 100%;
  margin:0;
