google maps API for space address

--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -83,6 +83,10 @@ html{
 .very-fast {
   transition-duration: 150ms !important; }
 
+.pac-container{
+  z-index: 1100;
+}
+
 /*===============================================
 GENERAL LAYOUT
 ================================================*/
