--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
+        async defer></script>
 	</head>
 
 	<body>
@@ -23,6 +25,7 @@
         $(document).foundation();
       	// }); 
   </script>
+
 
 
 	</body>
