added label, help-text, multiple web page insertions, google autocomplete API to create profile form

--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -87,6 +87,10 @@ html{
   z-index: 1100;
 }
 
+.warning{
+  border:1px solid red;
+}
+
 /*===============================================
 GENERAL LAYOUT
 ================================================*/
