--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -72,6 +72,11 @@ html{
   overflow: hidden;
 }
 
+main {
+  padding-top:1.8rem;
+  padding-bottom:1.8rem;
+}
+
 .whole-container {
     overflow-y: scroll;
     height: 100%;
@@ -393,15 +398,11 @@ Header
     @extend .pard-bar;
     min-height: 6rem;
     padding-top: 0.9rem; 
-    margin-bottom: 1.8rem;
-   // position: fixed;
   }
   .user-bar{
     @extend .pard-bar;
     min-height: 4.5rem;
     padding-top: auto; 
-    margin-bottom: 1.8rem;
-
   }
 }
 
@@ -800,11 +801,9 @@ FOOTER
   position:relative;
   background: $content-background;
   padding-bottom:0rem;
-  // position: absolute;
   bottom:0;
   @include breakpoint(large) {  
     height:5rem;
-    margin-top: 1.8rem;
     padding-top:2rem;
   }
   @include breakpoint(medium down){
