--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -629,7 +629,6 @@ Aside
 
 .profile-nav-circle, 
 .profile-nav-circle-selected{
-  @include pardCircle(2.2rem);
   cursor: pointer; 
   position: relative;
   margin: 0 auto;
@@ -673,7 +672,7 @@ Profile Card
 -------------------*/
 
 .profileCard{
-  border: solid 1px #bababa;
+  // border: solid 2px #bababa;
   box-shadow: 0px 1px 2px 1px rgba(10, 10, 10, 0.2);
   display: block;
   line-height: 0;
@@ -681,41 +680,47 @@ Profile Card
 	@include border-radius($element-border-radius);
 	position:relative;
   @include breakpoint(medium){
-  	width: $pard-aside-width;
-  	height: 14.5rem;
+  	width: 11rem;
+  	height: 14.25rem;
+    padding: 3px;
   }
 	@include breakpoint(small down) {
-    width: 30vw;
+    width: 31vw;
     height: 39vw;
+    padding: 1px;
+
   	.circleProfile {
-			height:14vw;
-			width: 14vw;
+			height:6vw;
+			width: 6vw;
 		}
 		.position-circleProfile-card{
-			margin-top: 4vw;		
+			margin-top: -3.5vw;		
 		}
+    .photo-container-card{
+      height: 10vw;
+    }
 		.name-profileCard{
-			margin-top: 22.14vw;
-			font-size: 3.8vw;
+			margin-top: 5.3vw;
+			font-size: 2.7vw;
+      line-height:3.2vw;
+      height: 10vw;
 		}
 		.city-profileCard{
-			margin-top: 27vw;
-			font-size: 2.7vw;
-			padding-bottom: 5vw;
-
+			margin-top: 2.3vw;
+			font-size: 2.2vw;
+			padding-bottom: 2.7vw;
 		}
 		.category-profileCard{
 			font-size: 2.2vw;
-			margin-top: 35vw; 
+			margin-top: 3.5vw; 
 		}
 	}
 }
 
 .profileCard:hover, .profileCard:focus {
-    box-shadow: 0 0 6px 1px rgba(255, 0, 0, 0.3);
+    // box-shadow: 0 0 6px 1px rgba(255, 0, 0, 0.3);
     cursor:pointer; 
-    cursor: hand;
-    // inset 0 0 0 1000px rgba(255,0,0,0.05), 
+        // inset 0 0 0 1000px rgba(255,0,0,0.05), 
 }  // If you want the shadow of the profile-color use js: .css({box-shadow: "0 0 6px 1px rgba(255, 0, 0, 0.5);"})
 
 .position-profileCard-login{
@@ -728,15 +733,23 @@ Profile Card
   }
 }
 
+.photo-container-card{
+  display: block;
+  width: 100%;
+  height: 3.75rem;
+  margin:0 auto;
+  background:red;
+}
+
 .circleProfile{
-  @include pardCircle(5rem);
+  @include pardCircle(2.2rem);
   // background: red;
 }
 
 .position-circleProfile-card {
-	position:absolute;
-	margin-top:1.5rem;
+	margin-top:-1.15rem;
 	@include horizontal-center;
+
 }
 
 .icon-profileCircle {
@@ -744,44 +757,45 @@ Profile Card
 }
 
 .name-profileCard{
-  font-size: 21px;
-  display: block;
-	position:absolute;
-	margin-top:8.2rem;
-	display:block;
+  @include breakpoint(medium){
+    padding-left: 1px;
+    padding-right:1px;
+  }
+	margin-top: 2.1rem;
 	text-align:center;
 	width:100%;
+  line-height: 1.3rem;
+  height: 2.5rem;
+  display: block;
 }
 
 .city-profileCard{
-	width:90%;
-	position:absolute;
+	width:100%;
 	display:block;
 	text-align:center;
 	color:$text-color;
-	margin-top:10rem;
-	@include horizontal-center;
+	margin-top:1.6rem;
+	// @include horizontal-center;
 	border-bottom: 1px solid $text-color;
-	padding-bottom: 1.8rem;
+	padding-bottom: 1rem;
+  font-size: $almostNormalSize;
 }
 
-.line-profileCard{
-	position:absolute;
-	margin-top:10.6rem;
-	display:block;
-	width: 90%;
-	@include horizontal-center;
-}
+// .line-profileCard{
+// 	position:absolute;
+// 	margin-top:10.6rem;
+// 	display:block;
+// 	width: 90%;
+// 	@include horizontal-center;
+// }
 
 .category-profileCard{
-	width: 90%;
-  @include horizontal-center;
+	width: 100%;
 	color: $text-color;
 	font-size: $smallSize;
 	text-align: center;	
 	display:block;
-	position:absolute;
-	margin-top:13.2rem;
+	margin-top:1.4rem;
 }
 
 // .circleProfile:hover, .line-profileCard:hover{
