--- a/assets/stylesheets/scss/_settings.scss
+++ b/assets/stylesheets/scss/_settings.scss
@@ -53,7 +53,11 @@ $pard-grid-width: 61.25rem;
 $pard-grid-spacing: 1.8rem;
 
 //colors
-$content-background: #f5f5f5;
+$content-background: #fff;
+$grey-1:#f6f6f6;
+$grey-2:#dedede;
+$grey-3:#bebebe;
+$grey-4:#6f6f6f;
 $element-background: #000;
 $element-color:#fff;
 $title-color: #757373;
